--- a/style.css
+++ b/style.css
@@ -1,27 +1,24 @@
-body{
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #f4f4f4;
-    padding: 40px;
+h1{
+    display: block;
+   color: black; 
+   font-family:  poppins;
+   font-weight: bold;
 }
-h1 {
-    color: #7e1a4c;
+h2{
+    display: none;
 }
-p {
-    color: #e9477d;
-    font-size: 18px;
+p{
+    font-size: medium;
+    line-height: normal;
+    
+
 }
-img {
-    width: 300px;
-    margin: 30px 0;
-    border-radius: 10px;
-}
-button {
-    padding: 12px 25px;
-    font-size: 18px;
-    background-color: #7e1a4c;
-     color: #e9477d;  
-         border: 2px solid #e9477d;
-    border-radius: 6px;
-    cursor: pointer;
+button{
+    background-color: darkslategrey;
+    display: inline-block;
+    padding: 20px;
+    border: 2px;
+    margin: 30px;
+
+
 }
