--- a/Rose/style.css
+++ b/Rose/style.css
@@ -4,16 +4,23 @@ body{
 }
 
 header{
-    border-bottom: 1px solid rgb(245, 150, 209);
+    border-bottom: 1px solid rgb(243, 189, 222);
     font-weight: bold;
     font-size: 30px;
+    height: 80px;
+}
+header li:hover{
+    cursor: pointer;
+}
+header li:active{
+    background-color:rgb(245, 150, 209) ;
 }
 nav{display: flex;
    align-items: center;
-   margin-right: 200px;
+   margin-right: 500px;
 }
 li{
-  padding: 6px; 
+  padding: 5px; 
 
 }
 #nav-bar{
@@ -48,5 +55,40 @@ font-size: 30px;
 }
 span{
     color: rgb(245, 150, 209);
+}
+ .about-doctor{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 60px;
+    margin-top: 30px;
+    font-size: 20px;
+   }
+      .about-doctor h2{
+    font-size: 30px;
+    margin-top: 60px;
+    
+
+   }
+   .about-doctor img{
+    height: 500px;
+    width: 500px;
+   
+   }
+   .service-cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 40px;
+    gap: 10px;
+  
+
+}
+.service-card img{
+    width: 350px; ;
+    height: 350px;
+}
+.service-card:hover{
+    transform: translateY(-5px);
+     box-shadow: 0 10px 20px rgba(0,0,0,0.15);
 }
 
