--- a/Rose/style.css
+++ b/Rose/style.css
@@ -98,4 +98,35 @@ span{
     transform: translateY(-5px);
      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
 }
+ @media (max-width:920px){
+  header{
+    font-size: 20px;
+    height:60px;
+} 
+nav{
+   margin-right: 300px;
+} 
+.hero{
+    height: 400px;
+}
+.hero-text{
+    padding: 100px;
+    
+
+
+}
+.hero-text h1{
+font-size: 50px;
+
+}
+.hero-text p{
+font-size: 30px;
+}
+
+ }
+  @media (max-width:700px){
+
+    
+ }
+
 
